--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="data:," />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>embedded-portfolio-boot</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="embedded-portfolio-boot" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Abhiraj Singh - Portfolio</title>
+    <meta name="description" content="Abhiraj Singh - Embedded Systems Engineer & M.Tech Student" />
+    <meta name="author" content="Abhiraj Singh" />
+    <meta property="og:title" content="Abhiraj Singh - Portfolio" />
+    <meta property="og:description" content="Abhiraj Singh - Embedded Systems Engineer & M.Tech Student" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Abhiraj Singh - Portfolio" />
+    <meta name="twitter:description" content="Abhiraj Singh - Embedded Systems Engineer & M.Tech Student" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
